Images are stretching on Safari for home page Fixes #181

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -58,10 +58,6 @@ hr {
   @extend .my-4, .w-100;
 }
 
-img {
-  max-width: 100%;
-}
-
 .youtube {
   @extend .mx-auto, .mb-3;
 
